# pythonProject2

./: .env.template  README.md  file_reader.py  main.py  mylog.txt  pyproject.toml  requirements.txt
src/: decorators.py  external_api.py  file_reader.py  generators.py  masks.py  mylog.txt  operations.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_file_reader.py  test_generators.py  test_masks.py  test_operations.py  test_processing.py  test_utils.py  test_widget.py
